Fix header and horizontal scroll

--- a/files/styles.sass
+++ b/files/styles.sass
@@ -49,9 +49,6 @@ html, body
   margin-bottom: 10px
   // min-height: 300px
 
-.flex-1
-  flex: 1
-
 .flex-horizontal
   display: flex
   align-items: center
@@ -63,11 +60,9 @@ html, body
   align-items: center
 
 .fable-header
-  @extend .flex-horizontal
-  padding: 20px
   background: linear-gradient(to left, lighten($fable-blue, 20%), white)
   .fable-logo
-    max-height: 200px
+    max-height: 150px
     @media screen and (max-width: 600px)
       max-height: 120px
     @media screen and (max-width: 400px)
